syntax = "proto3";

package massa.api.v1;

option cc_enable_arenas = true;
option csharp_namespace = "Massa.Api.V1";
option go_package = "google.golang.org/genproto/massa/api/v1/common;common";
option java_multiple_files = true;
option java_package = "com.massa.api.v1";
option objc_class_prefix = "COMMON";
option php_namespace = "Massa\\Api\\V1";


// BytesMapFieldEntry
message BytesMapFieldEntry {
    // bytes key
    bytes key = 1;
    // bytes key
    bytes value = 2;
}
